--- a/package.json
+++ b/package.json
@@ -8,7 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "aos": "^2.3.4",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "copy-webpack-plugin": "^4.6.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-webpack-plugin": "^2.3.0",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.17",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-fullpage.js": "0.0.8",
+    "vue-router": "^3.0.1",
+    "vue-typed-js": "^0.1.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
